<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textjudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/textJudul"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="490dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/textPromosi"
        android:textColor="@color/white"
        android:textSize="18sp"


        />

    <Button
        android:id="@+id/btnKeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:backgroundTint="#326E6C"
        android:fontFamily="@font/montserrat"
        android:text="@string/textLogin" />

    <TextView
        android:id="@+id/textSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:fontFamily="@font/montserrat"
        android:text="Test"
        android:textColor="@color/white"
        android:textSize="15sp" />


</RelativeLayout>