<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
=======
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 245d65006fb3ce1b217d10bd300734d2dee48d20
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Beranda">

<<<<<<< HEAD
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tMaukemana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tMaukemana"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.057"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/kBudaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fpindahbudaya"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tKatagori"
            app:srcCompat="@drawable/budaya"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/kMakanan"
            android:layout_width="109dp"
            android:layout_height="86dp"
            android:onClick="fpindahmakan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tKatagori"
            app:srcCompat="@drawable/makan"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tBudaya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tBudaya"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kBudaya"
            app:layout_constraintVertical_bias="0.053" />

        <TextView
            android:id="@+id/tMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tMakanan"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.096"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kMakanan"
            app:layout_constraintVertical_bias="0.015" />

        <TextView
            android:id="@+id/tAlam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tAlam"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kAlam"
            app:layout_constraintVertical_bias="0.034" />

        <ImageView
            android:id="@+id/kAlam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fpindahalam"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tKatagori"
            app:srcCompat="@drawable/alam"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tSejarah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tSejarah"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.922"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/kSejarah"
            app:layout_constraintVertical_bias="0.036" />

        <ImageView
            android:id="@+id/kSejarah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="fpindahsejarah"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.949"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tKatagori"
            app:srcCompat="@drawable/sejarah"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tKatagori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tKatagori"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tMaukemana" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Daftar Wisata"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tMakanan"
            app:layout_constraintTop_toBottomOf="@+id/tMakanan" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWisata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/bProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:onClick="PindahProfile"
            android:text="Profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>
=======
    <TextView
        android:id="@+id/NamaUserHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
         />

    <TextView
        android:id="@+id/EmailUserHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
         />

    <TextView
        android:id="@+id/LevelUserHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
         />

    <TextView
        android:id="@+id/EXPUserHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
         />

    <TextView
        android:id="@+id/HalamanBerandaUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Halaman Beranda user"
         />
</RelativeLayout>
>>>>>>> 245d65006fb3ce1b217d10bd300734d2dee48d20
